update (frontend) connection with backend and demo lists
