# backend/src/generated/swagger.json
@@ -890,6 +890,7 @@
 				"security": [
 					{
 						"jwt": [
+							"userAdmin",
 							"roles:read"
 						]
 					}
@@ -956,6 +957,7 @@
 				"security": [
 					{
 						"jwt": [
+							"userAdmin",
 							"roles:update"
 						]
 					}
@@ -1002,6 +1004,7 @@
 				"security": [
 					{
 						"jwt": [
+							"userAdmin",
 							"roles:delete"
 						]
 					}
@@ -1089,7 +1092,14 @@
 				"tags": [
 					"Users"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"userAdmin",
+							"roles:read"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -1167,6 +1177,7 @@
 				"security": [
 					{
 						"jwt": [
+							"userAdmin",
 							"roles:create"
 						]
 					}
